# terminal_forge

./: .editorconfig  .eidosian.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eidosian_config.yml  eidosian_principles.md  project_overview.md  project_structure.md  pyproject.toml  terminal-forge.code-workspace  terminal_forge_repo_init.py  universal_doc_structure.md
docs/: api_reference.md  conf.py  examples.md  getting_started.md  index.md
docs/source/: index.md
eidosian_monorepo/: .eidosian.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eidosian_config.yml  pyproject.toml
eidosian_monorepo/projects/python_project/: pyproject.toml
eidosian_monorepo/projects/python_project/src/python_project/: main.py
eidosian_monorepo/projects/python_project/tests/: test_example.py
eidosian_monorepo/projects/rust_project/: Cargo.toml  README.md
eidosian_monorepo/projects/rust_project/src/: main.rs
examples/: advanced.py  animations.py  basic.py  themes.py
examples/integration/: api_consumption.py  data_visualization.py  real_time.py
examples/interactive/: focus.py  keyboard.py  navigation.py
examples/layouts/: flow.py  grid.py  responsive.py
projects/python_project/: README.md
scripts/: README.md
scripts/dev/: run_tests.sh
scripts/setup/: install_dependencies.sh
templates/credentials/: README.md  pypirc.example
terminal_forge/: __init__.py  ascii_art.py  banner.py  borders.py  colors.py  effects.py  layout.py  themes.py  utils.py
tests/fixtures/: color_schemes.py  mock_terminal.py  sample_layouts.py
(+39 files in other folders)
